fixing template on iphone

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -127,15 +127,16 @@ article
     margin-left: 80px
     li
       margin: 20px 0
-      a
+      span
         margin-left: 5px
         vertical-align: middle
         display: inline-block
+        width: 350px
       img
         width: 50px
         height: 50px
         vertical-align: middle
-      a.no-image
+      span.no-image
         margin-left: 60px
     .date-label
       position: absolute
