--- a/app/assets/stylesheets/iphone.sass
+++ b/app/assets/stylesheets/iphone.sass
@@ -62,6 +62,9 @@ html, body
     margin-top: 10px
     font-size: 36px
 
+#posts li span
+  width: 150px
+
 .social
   overflow: auto
 .dsq-content
